@@ -65,15 +65,14 @@ struct compression comp_list[] = {
 	{BUNZIP2, "bz2", NULL},
 #endif /* HAVE_BZIP2 */
 
-/* If we have lzma, incorporate the following */
-#ifdef HAVE_LZMA
-	{UNLZMA, "lzma", NULL},
-#endif /* HAVE_LZMA */
-
 /* If we have xz, incorporate the following */
 #ifdef HAVE_XZ
 	{UNXZ, "xz", NULL},
-#endif /* HAVE_XZ */
+	{UNXZ, "lzma", NULL},
+/* Else if we have lzma, incorporate the following */
+#elif defined (HAVE_LZMA)
+	{UNLZMA, "lzma", NULL},
+#endif /* HAVE_XZ || HAVE_LZMA */
 
 /*------------------------------------------------------*/
 /* Add your decompressor(s) and extension(s) below here */
